instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:2: error: not found: type bleu
setCouleurBrosse(c:bleu)
                   ^InstructionsDrawG:2: error: not found: value c
setCouleurBrosse(c:bleu)
                 ^