instructions.InstructionsDrawG.scala.code
baisseBrosse()
setCouleurBrosse(c:bleu)
droite()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
gauche()
avance()